complete homework b with reverse compliment exercise

--- a/ex_B_homework.ipynb
+++ b/ex_B_homework.ipynb
@@ -4,17 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# homework B: protein sequences \n",
+    "# homework B: lists and protein sequences\n",
     "\n",
-    "Make sure you have worked through [workbook B](./workbook_B.ipynb)"
+    "Make sure you have worked through [workbook B](./ex_B_workbook.ipynb) before tackling this homework."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##  Working out the overall charge of a bee venom protein\n",
-    "We have been working with nucleotide sequences. Now lets switch to proteins that are the things that do most of the work in biology. Proteins are polymers of amino acids joined by peptide bonds (you will learn alot about this in the course). There are twenty amino acid coded in genomes: "
+    "##  protein sequences\n",
+    "We have been working with nucleotide sequences. Now lets switch to proteins that are the things that do most of the work in biology. Proteins are polymers of amino acids joined by peptide bonds (you will learn alot about this in the course). There are twenty amino acid coded in genomes (ignore the Selenocysteine **U** for now): "
    ]
   },
   {
@@ -35,20 +35,91 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# add an exercise about amino acid sequence.\n",
-    "raise NotImplementedError()"
+    "# instruction: create lists of the one letter for amino acids of \n",
+    "# different categories from figure above.\n",
+    "\n",
+    "# I have do the first one for you:\n",
+    "# aa_negative: one letter codes for the two amino acids with side chains\n",
+    "#               that are normally negatively charged.\n",
+    "aa_negative = ['D', 'E']\n",
+    "print('negative amino acids:', aa_negative)\n",
+    "\n",
+    "# aa_positive: one letter codes for the 3 amino acids with side chains that\n",
+    "#           that are normally positively charged.\n",
+    "### your line here!\n",
+    "aa_positive = ['R', 'H', 'K']\n",
+    "print('positive amino acids:', aa_positive)\n",
+    "\n",
+    "# aa_polar: one letter codes for the 4 amino acids with side chains that\n",
+    "#           that are polar but not charged.\n",
+    "aa_polar = []  # empty list\n",
+    "# now use .append() to add the amino acids one at a time\n",
+    "### your line here!\n",
+    "### your line here!\n",
+    "### your line here!\n",
+    "aa_polar.append('S')\n",
+    "aa_polar.append('T')\n",
+    "aa_polar.append('N')\n",
+    "aa_polar.append('Q')\n",
+    "\n",
+    "print('polar amino acids:', aa_polar)\n",
+    "\n",
+    "\n",
+    "# aa_special: one letter codes for the 3 amino acids with side chains that\n",
+    "#             classified as special in figure - ignoring U.\n",
+    "aa_special = ['C', 'G', 'P']\n",
+    "print('special amino acids:', aa_special)\n",
+    "\n",
+    "# aa_hydrophobic: one letter codes for the 8 amino acids with side chains that\n",
+    "#                 are hydrophobic.\n",
+    "aa_hydrophobic = list('AILMFWYV')  # Note conversion of string to list.\n",
+    "print('hydrophobic amino acids:', aa_hydrophobic)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## apamin\n",
+    "We now have five lists for the different classification of amino acids. There should be:\n",
+    "* 2 amino acids with negatively charged side chains\n",
+    "* 3 positive amino acids\n",
+    "* 4 polar amino acids\n",
+    "* 3 special amino acids\n",
+    "* 8 hydrohobic amino acids\n",
+    "Use the `len()` function to check the numbers in each list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# instruction: use len function to print out the number of each of the five lists.\n",
+    "### your line here! (2 -ve)\n",
+    "### your line here! (3 +ve)\n",
+    "### your line here! (4 polar)\n",
+    "### your line here! (3 special)\n",
+    "### your line here! (8 hydrophobic)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now create a list of the twenty coded amino acids **using the five lists you have just created**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##  Working out the overall charge of a bee venom protein\n",
     "Apamin is a bee venom toxin.\n",
     "\n",
     "<img src='https://upload.wikimedia.org/wikipedia/commons/b/b2/Stamps_of_Romania%2C_2010-04.jpg' width=150 align=\"left\"/> \n",
@@ -66,7 +137,7 @@
     "```\n",
     "CNCKAPETALCARRCQQH\n",
     "```\n",
-    "Strickly speaking it is to short to be called a protein and should be called a polypeptide.\n",
+    "Strickly speaking it is too short to be called a protein and should be called a polypeptide.\n",
     "It is a neurotoxin that works by blocking one of the potassium ion channels."
    ]
   },
@@ -104,7 +175,13 @@
     "Charge_{overall} = (N_R + N_H + N_K) - (N_D + N_E)\n",
     "$$\n",
     "\n",
-    "Your task it to work out the number of charged amino acids and the overall charge of apamin. "
+    "Your task it to work out the number of charged amino acids and the overall charge of apamin. \n",
+    "\n",
+    "> \n",
+    "> *Hint: look through exercise A to see how to **count** the number of occurences of a \n",
+    "> particular  character in a string*\n",
+    ">\n",
+    "> *Hint: you can hard code amino acid one letter codes like 'R' or use the lists defined above*"
    ]
   },
   {
@@ -117,9 +194,10 @@
     "sequence = 'RHKDER'\n",
     "\n",
     "# Instruction: your code to work n_charged\n",
+    "n_charged = 0\n",
     "\n",
     "# Instruction: your code to work total_charge\n",
-    "\n",
+    "total_charge =0\n",
     "\n",
     "assert n_charged == 6\n",
     "assert total_charge == 2"
@@ -195,13 +273,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## reverse compliment exercise\n",
+    "\n",
+    "> Have a go at this if you have time.\n",
+    "\n",
+    "In homework A we worked out how to find the complement of a DNA sequence:\n",
+    "```\n",
+    "5'-AAAATTTGGC-3'\n",
+    "   ||||||||||\n",
+    "3'-TTTTAAACCG-5'\n",
+    "```\n",
+    "The complement of the sequence `TTTTAAACCG` is shown at the bottom but this sequence is from the \n",
+    "3'-end of the DNA strand so is backwards.\n",
+    "\n",
+    "DNA sequences are normally read from the 5'-end to the 3'-end. So the reverse compliment is found by\n",
+    "1. finding the complement sequence by replacing A with T, T with A, C with G and G with C (remember the trick we used).\n",
+    "2. Reversing the complement string using the technique shown in [workbook B](./ex_B_workbook.ipynb) \n",
+    "\n",
+    "> compare your results with the oneline tool https://www.bioinformatics.org/sms/rev_comp.html"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Instruction: produce a reverse compliment procedure\n",
+    "# and use to find the reverse compliment of:\n",
+    "# (a) AG\n",
+    "# (b) CT\n",
+    "# (c) AAAATTTGGC\n",
+    "# (d) GCCAAATTTT\n",
+    "# (e) CTGCTATAAAAGGCTG\n"
+   ]
   }
  ],
  "metadata": {
