add DataCamp Chapter 3 to the list of the preconditions for the exercise

--- a/ex_B_workbook.ipynb
+++ b/ex_B_workbook.ipynb
@@ -6,7 +6,12 @@
    "source": [
     "# workbook B: lists and strings\n",
     "\n",
-    "This activity builds on the Python you have become familiar with in *Chapter 2 Python list* from the\n",
+    "This activity builds on the Python you have become familiar with \n",
+    "\n",
+    "* *Chapter 2 Python Lists* \n",
+    "* *Chapter 3 Functions and packages*\n",
+    "\n",
+    "from the\n",
     "[DataCamp online course *Intro to Python for Data Science*](https://www.datacamp.com/courses/intro-to-python-for-data-science). Here we will look at lists and explore how strings and lists are related."
    ]
   },
