--- a/ex_D_workbook.ipynb
+++ b/ex_D_workbook.ipynb
@@ -196,11 +196,38 @@
    "source": [
     "**Now it is your turn!**\n",
     "\n",
-    "Write a function that returns the number of G and C bases in a given sequence.\n",
+    "The following bit of code works out the complement of a given DNA sequence:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sequence = 'ATTGGGCCCC'\n",
+    "complement = sequence.replace('A','t')\n",
+    "complement = complement.replace('T','a')\n",
+    "complement = complement.replace('G','c')\n",
+    "complement = complement.replace('C','g')\n",
+    "complement = complement.upper()\n",
+    "complement"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "But what if we wanted to work out the complement of another sequence:\n",
+    "```\n",
+    "tata_oligo = 'CTGCTATAAAAGGCTG'\n",
+    "```\n",
+    "We *could* copy and paste the code section above and then adapt it but this\n",
+    "is **a really bad idea**. Instead it is much better to use a function. \n",
+    "If you find yourself copy and  pasting sections of code in your work then think again - \n",
+    "there is likely to be a better way.\n",
     "\n",
-    "First think what would be a good name for the function. The Python convention is\n",
-    "that function names are lower case with words separated by underscores - so lets call\n",
-    "it `number_gc`"
+    "So lets create a function to work out the complement of a sequence. What would a sensible function name be>"
    ]
   },
   {
@@ -211,8 +238,8 @@
    },
    "outputs": [],
    "source": [
-    "# Instruction: write a function thats returns the number of G and C bases in a given sequence.\n",
-    "def ___(___):   ### replace the ____\n",
+    "# Instruction: write a function thats returns the complement in a given sequence.\n",
+    "def ___(___):   ### replace the 1st ____ with a function name, 2nd with a sensible name for the argument\n",
     "    \"\"\"docstring describing the function\"\"\"\n",
     "    return ____ ### replace the ____"
    ]
@@ -221,23 +248,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we need to test the `number_gc` function works\n",
+    "Now use the `complement` function to check the complements of the following sequences\n",
     "\n",
-    "First complete this table \n",
-    "\n",
-    "> you will need to edit this Markdown cell to do this double click on the cell \n",
-    "> and then replace the ? in the table below. When you have finished run the cell\n",
-    "> with the run button above\n",
-    "\n",
-    "| **test sequence** | **number of G and C** |\n",
-    "| ----------------- | :-------------------: |\n",
-    "| G   | 1 |\n",
-    "| C   | 1 |\n",
-    "| AAA | 0 |\n",
-    "| GGG | ? |\n",
-    "| CAT | ? |\n",
-    "| GAC | ? |\n",
-    "| GGGAAACCCTTT | ? |"
+    "* `A`\n",
+    "* `AT`\n",
+    "* `ATGC`\n",
+    "* `CTGCTATAAAAGGCTG`"
    ]
   },
   {
@@ -248,7 +264,403 @@
    },
    "outputs": [],
    "source": [
-    "# Instruction: test the number_gc function with the data from the completed table above."
+    "# Instruction: use the complement function to check the sequences\n",
+    "# have their expect compliment"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now go on and create a `reverse_complement` function to work out the reverse complement of a DNA sequence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Instruction: write a reverse_complement function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Instruction: test your reverse complement function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In writing your `reverse_complement` function have you copy and pasted the `complement` function?\n",
+    "\n",
+    "What happens if we need to handle RNA sequences that have the base U (with the complement A)? Would you need to edit both the `complement` and `reverse_complement` functions.\n",
+    "\n",
+    "If you answered yes then think again and rewrite the `reverse_complement` function so that it calls the `complement` function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Instruction: rewritten reverse complement function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now replace the `complement` function with an extension that deals with RNA base U that has the complement A."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Instruction: extended complement function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Show that the `complement` and `reverse_complement` function work as expected for RNA sequences "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Instruction: your tests of complement and reverse_complement for RNA sequences"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Question what happens if you work out the complement of the sequence `UUUTTT` using your function?\n",
+    "\n",
+    "Is this sensible"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## functions with default arguments\n",
+    "\n",
+    "These can be really useful to provide **default arguments** to functions. Lets start with an example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Instruction: run this cell so the kernel has the log_entry definition\n",
+    "def log_entry(name, status='worker'):\n",
+    "    print('LOG ENTRY name:\"{}\" status:\"{}\"'.format(name, status))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If we call log_entry with a single argument then the `status` will be `worker`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Instruction: run this cell to see result of calling log_entry with a single argument\n",
+    "log_entry('Jasmine Begum')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "But if Jasmine brought a visitor:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Instruction: run this cell to see override of the default\n",
+    "log_entry('John Brown', status='visitor')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Log the entry of \n",
+    "* Tom Singh whose status is 'security' \n",
+    "* Burglar whose status is 'intruder'.\n",
+    "* Alice Clarke who works here."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Instruction: call log_entry to log the 3 entries"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally note that we can call log_entry using parameter names \n",
+    "for all arguments:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "log_entry(name='Field Mouse')\n",
+    "log_entry(name='Green Frog', status='wildlife')\n",
+    "log_entry(status='unknown', name='Brown Bear')\n",
+    "log_entry('Fred Flintstone', 'cartoon character') # using 2 positional arguments"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**TIP:** For functions with loads of parameters it is normally much clearer to use parameter names rather than positional arguments as the code produced is much easier to read."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Returning to the complement and reverse complement procedures it could be simplification to define a single function:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Instruction: complete the new complement fn. with reverse argument\n",
+    "def complement(sequence, reverse=False):\n",
+    "    \"\"\"your docstring describing the complement\"\"\"\n",
+    "    pass ### replace this line with your code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To use the new complement function we can call either without a reverse argument for the normal forward complement or with `reverse=True` to get the reverse complement."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_seq = 'AAAG'\n",
+    "test_comp = complement(test_seq)\n",
+    "test_rev_comp = complement(test_seq, reverse=True)\n",
+    "print('test_seq={} complement={} reverse_complement={}'.\n",
+    "      format(test_seq, test_comp, test_rev_comp))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Optional exercise: deal with RNA sequences properly\n",
+    "\n",
+    "Comparing DNA and RNA sequences the DNA base **`T`** is replaced by **`U`** \n",
+    "and so the complement of **`A`** is **`U`** and the complement of **`U`** is **`A`**\n",
+    "\n",
+    "Lets introduce an argument `rna` that if set true would mean that the output \n",
+    "is an RNA seqiemce with **`U`**'s in place of **`T`**s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Instruction: produce a new complement function that can\n",
+    "def complement(sequence, reverse=False, rna=False):\n",
+    "    \"\"\"your docstring describing the complement\"\"\"\n",
+    "    pass ### replace this line with your code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Instruction: your tests of RNA handling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Optional exercise: deal with lower case sequence\n",
+    "\n",
+    "Suppose we want to deal with DNA sequences with lower case letters like:\n",
+    "```\n",
+    "tata_oligo = 'ctgcTATAAAaggctg'\n",
+    "```\n",
+    "the complement sequence should preserve the upper/lower case for each letter.\n",
+    "So our sequence:\n",
+    "```\n",
+    "tata_oligo = 'ctgcTATAAAaggctg'\n",
+    "tata_compl = 'gacgATATTTtccgac'\n",
+    "```\n",
+    "\n",
+    "(See https://www.bioinformatics.org/sms/rev_comp.html for a tool that does this).\n",
+    "\n",
+    "What happens with our current complement function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Instruction: test current complement \n",
+    "tata_oligo = 'ctgcTATAAAaggctg'\n",
+    "tata_compl = complement(tata_oligo)\n",
+    "print('tata_oligo =' + tata_oligo)\n",
+    "print('tata_compl =' + tata_compl)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Question: what does the current `complement` function do with lower case? \n",
+    "\n",
+    "Answer: **edit your answer here**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "How can you fix the procedure?\n",
+    "\n",
+    "Hint: possible solutions:\n",
+    "* use a for loop to go through the sequence and substitute letter by letter \n",
+    "* use the Python translate method as explained at https://www.tutorialspoint.com/python/string_translate.htm and demonstrated here."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Instruction: run this cell for a demonstration of \n",
+    "# String translate in Python3\n",
+    "# want to replace all a's with 1, all b's to 2, \n",
+    "# all c's to 3, all d's to 4. Leaving all other characters alone\n",
+    "work_on_chars = 'abcd'\n",
+    "translate__to = '1234'\n",
+    "abcd_to_1234 = str.maketrans(work_on_chars,translate__to)\n",
+    "test_string = 'abcdefg. The quick brown fox jumps over the lazy dog!'\n",
+    "translate_string = test_string.translate(abcd_to_1234)\n",
+    "print(translate_string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Instruction: produce a complement function that preserves \n",
+    "# the upper/lower case of the input sequence.\n",
+    "def complement(sequence, reverse=False, rna=False):\n",
+    "    \"\"\"your docstring describing the complement\"\"\"\n",
+    "    pass ### replace this line with your code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Instruction: test new complement function.\n",
+    "tata_oligo = 'ctgcTATAAAaggctg'\n",
+    "know_compl = 'gacgATATTTtccgac'\n",
+    "tata_compl = complement(tata_oligo)\n",
+    "print('tata_oligo =' + tata_oligo)\n",
+    "print('tata_compl =' + tata_compl)\n",
+    "if tata_compl != know_compl:\n",
+    "    print('error!')\n",
+    "else:\n",
+    "    print('test passes')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Optional exercise: deal with Ambituity codes\n",
+    "* See http://reverse-complement.com/ambiguity.html \n",
+    "* extend your code to deal with ambituity codes\n",
+    "* compare results against http://reverse-complement.com/ and http://arep.med.harvard.edu/labgc/adnan/projects/Utilities/revcomp.html"
    ]
   },
   {
